[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "dotenv>=0.9.9",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "neo4j>=5.18.0",
    "pymongo>=4.6.0",
    "dnspython>=2.6.0",
    "pytest>=9.0.3",
    "certifi>=2026.5.20",
    "mongoengine>=0.29.3",
    "django-cors-headers>=4.9.0",
]
